[package]
name = "satd"
version.workspace = true
edition.workspace = true

[dependencies]
node = { path = "../node" }
esplora-handlers = { path = "../esplora-handlers" }
satd-events = { path = "../events", features = ["grpc", "zmq"] }
satd-mcp = { path = "../mcp" }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
bitcoin = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
jsonrpsee = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
tikv-jemallocator = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
