[package]
name = "satd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = ["block-filter-index"]
# Forwards `node`'s `block-filter-index` feature so a `cargo build
# --no-default-features` on the satd binary produces a consensus-only
# build with no BIP 158 codec compiled in.
block-filter-index = ["node/block-filter-index"]

[dependencies]
node = { path = "../node", default-features = false }
node-index = { path = "../node-index" }
node-filter-index = { path = "../node-filter-index" }
esplora-handlers = { path = "../esplora-handlers" }
electrum-proto = { path = "../electrum-proto" }
satd-events = { path = "../events", features = ["grpc", "zmq"] }
satd-mcp = { path = "../mcp" }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
bitcoin = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
jsonrpsee = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
sd-notify = { workspace = true }
tikv-jemallocator = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tempfile = "3"
# Third-party Electrum client for the E2E suite. Independent
# implementation of the wire protocol (predates `electrum-proto`;
# ships its own message types). Drives the Electrum test group so
# wire-format regressions a native-Rust client we wrote ourselves
# would gloss over still get caught.
electrum-client = "0.25"
