[package]
name = "satd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = ["block-filter-index"]
# Forwards `node`'s `block-filter-index` feature so a `cargo build
# --no-default-features` on the satd binary produces a consensus-only
# build with no BIP 158 codec compiled in.
block-filter-index = ["node/block-filter-index"]
# Marker for the E2E integration test target — see the `[[test]]`
# section below. The general `cargo test --all --locked` step in CI
# skips the e2e binary because its `required-features = ["e2e"]`
# isn't satisfied; the dedicated E2E step enables it explicitly via
# `--features e2e`. Without this gating, `cargo test --all` would
# run the suite once with `RUST_TEST_THREADS=4` (defeating the
# serialized contract) before the dedicated step runs it again.
e2e = []
# Marker for the live-Core block-acceptance differential test target (see the
# `[[test]]` section below). It spawns a real Bitcoin Core in Docker and
# compares block-acceptance verdicts against satd; it must NOT run under the
# general `cargo test --all --locked` step (no Docker there, and it would race
# the e2e serialization contract). The dedicated canary job enables it with
# `--features core-block-differential`. The Lint job's `cargo clippy
# --all-features` still type-checks the harness on every PR.
core-block-differential = []

# Pin the e2e integration test target to its own feature. Combined
# with the `e2e = []` feature above, this keeps `cargo test --all`
# from picking up the suite by accident. The Lint job runs
# `cargo clippy --all-features` so the test code still gets
# type-checked on every PR.
[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["e2e"]

# Live-Core block-acceptance differential — Docker-gated, mirrors the `e2e`
# pattern above.
[[test]]
name = "core_block_differential"
path = "tests/core_block_differential.rs"
required-features = ["core-block-differential"]

[dependencies]
node = { path = "../node", default-features = false }
node-index = { path = "../node-index" }
node-filter-index = { path = "../node-filter-index" }
esplora-handlers = { path = "../esplora-handlers" }
satd-auth = { path = "../satd-auth" }
electrum-proto = { path = "../electrum-proto" }
tls-config = { path = "../tls-config" }
satd-events = { path = "../events", features = ["grpc", "zmq", "ws"] }
satd-mcp = { path = "../mcp" }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
bitcoin = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
jsonrpsee = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
sd-notify = { workspace = true }
tikv-jemallocator = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tempfile = "3"
rcgen = { workspace = true }
# Streaming E2E harness (tests/e2e/streaming.rs, folded into the `e2e` test
# target): a real gRPC client (tonic,
# pinned to the workspace version so it matches the `satd_events::proto`
# generated service client) and a real WebSocket client. `default-features
# = false` on tokio-tungstenite drops the TLS connectors — the suite speaks
# plaintext ws:// to a loopback satd, so it needs only the connect +
# handshake paths, and pulling rustls here would re-trip the dual
# crypto-provider conflict documented on the `electrum-client` dep above.
tonic = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
# The published Rust SDK, exercised end-to-end against a real satd node by
# tests/e2e/sdk.rs (folded into the `e2e` target). Default features include
# `bitcoin`, so the prefix-watch local re-filter (`PrefixWatcher`) is available.
satd-events-client = { path = "../satd-events-client" }
# Third-party Electrum client for the E2E suite. Independent
# implementation of the wire protocol (predates `electrum-proto`;
# ships its own message types). Drives the Electrum test group so
# wire-format regressions a native-Rust client we wrote ourselves
# would gloss over still get caught.
#
# `default-features = false` + no `rustls*` / `proxy`: our tests
# connect via plain TCP (`tcp://127.0.0.1:port`), so we don't need
# the TLS or SOCKS5 paths at all. Pulling either flavour of rustls
# in unifies with the workspace's existing rustls (via tokio-rustls
# + hyper-rustls + rustls-platform-verifier), enabling *two* crypto
# provider features simultaneously and tripping rustls's runtime
# `CryptoProvider::install_default()` panic. Dropping the TLS
# feature entirely sidesteps the unification.
electrum-client = { version = "0.25", default-features = false }
# Third-party Bitcoin Core JSON-RPC client. Same role as
# `electrum-client` above for Electrum: an independent client
# written against Core's documented wire shape, so our handlers'
# responses must round-trip through *its* deserializers — not just
# ours. Drift from Core's field names, types, or error codes shows
# up as a deserialize panic in the test, not a silent
# shape-divergence in production.
bitcoincore-rpc = "0.19"
# Third-party Esplora REST client (BDK). Same parity-oracle role
# for the Esplora surface. `default-features = false` +
# `features = ["blocking"]` selects the `minreq` blocking
# transport — avoids the `reqwest` async path and the
# `async-https`/`rustls` feature combos, mirroring the rationale
# for `electrum-client`'s minimal feature set above.
esplora-client = { version = "0.12", default-features = false, features = ["blocking"] }
